# llm-txt-generator

./: .gitignore  README.md  env.example  main.py  pyproject.toml  test.py  test_openai.py
llm-generator-go/: README.md  go.mod  go.sum
llm-generator-go/cmd/: main.go
llm-generator-go/internal/content/: content_processor.go
llm-generator-go/internal/embedding/: embedding_service.go
llm-generator-go/internal/formatter/: doc_formatter.go
llm-generator-go/internal/repo/: repo_handler.go
src/: __init__.py  content_processor.py  embedding_service.py  formatter.py  repo_handler.py
